@@ -1,6 +1,10 @@
-[B]2.0.0[/B]
-- Version made to be compatible with Kodi Matrix (&amp; Python 3.X)
+[B]2.1.0[/B]
+- Change cache method
 
+[B]2.0.0[/B]
+- Version made to be compatible with Kodi Matrix (& Python 3.X)
+- Improved performance by enabling reuse language invoker
+- Various minor tweaks
 
 [B]1.3.1[/B]
 - Refined radio list function to avoid creating duplicates
